fix: 🐛 Overflow

--- a/src/http/style.css
+++ b/src/http/style.css
@@ -18,6 +18,7 @@
   margin-top: 4vh !important;
   padding-bottom: 4vh !important;
   padding-top: 3vh !important;
+  overflow: visible !important;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -55,4 +56,3 @@
     padding-inline: 2vh;
   }
 }
-
